                             Representation Templates ( 5.40000 and 5.40010,
                             respectively ) for operational use.  The templates
                             were assigned WMO values of 5.40 and 5.41,
                             respectively.  Changes were made to the source to
                             recognize either template number.
                           - Fixed bug encountered when packing a near constant
                             field with DRT 5.40 or 5.40000 (JPEG2000).
                           - Added consistency check, provided by 
                             Arthur Taylor/MDL, used when unpacking Data 
                             Templates 7.2 and 7.3.
                           - Added functionality to support encoding of
                             "Missing" data values within the data field when
                             using Data Representation Templates 5.2
                             (complex packing) and 5.3 (complex packing and
                             spatial differencing).  See octets 23 - 31 in DRTs
                             5.2 and 5.3 for more info on missing value
                             management.
                           - Increased the packing efficiency of Data
                             Representation Templates 5.2 and 5.3 by adding
                             MDL/Glahn algorithm for determining effective
                             groupings.

g2libc-1.0.3 - December 2005 - Two bug fixes:  1) Error encoding constant
                               data field.  2)  Error encoding grid with
                               large bitmap using DRT 5.40 - JPEG2000.

g2libc-1.0.4 - October 2006 - Modified Product Definition Templates 4.5 and 4.9
                              to allow negative scale factors and limits.
                            - Fixed rounding error bugs during encoding.
                            - Cleanup up a few small memory leaks.
